examples/test/testpolicy9837.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9837
  namespace: namespace30
spec:
  podSelector:
    matchLabels:
      key37: value37
      key28: value20
      key46: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value39
          key40: value26
      podSelector:
        matchLabels:
          key44: value4
